--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "protractor-beautiful-reporter": "1.3.6",
     "jasmine-allure-reporter": "1.0.2",
     "protractor-helper": "4.2.1",
-    "html-dnd": "1.2.1"
+    "html-dnd": "1.2.1",
+    "moment": "2.29.1"
   },
   "scripts": {
     "test": "protractor conf.js",
