--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jasmine-allure-reporter": "1.0.2",
     "protractor-helper": "4.2.1",
     "html-dnd": "1.2.1",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "protractor-fail-fast": "3.1.0"
   },
   "scripts": {
     "test": "protractor conf.js",
