--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #Below files & folders are ignored during code commit
 
 node_modules/
-node_modules_old/
+node_modules_backup/
 .gitignore
 reports-tmp
 Database_test_with_mysql
